--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,14 @@ header nav a {
     color: #333;
 }
 
+.close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    color: #333;
+}
+
 /* Hero Section */
 .hero {
     position: relative;
