--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ section h2 {
 .vehicle-item img {
     width: 100%;
     height: 250px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
 }
 
