--- a/css/style.css
+++ b/css/style.css
@@ -325,8 +325,17 @@ footer {
         margin-bottom: 0.5rem;
         width: 50%;
     }
+
+    .footer-content {
+        flex-direction: column;
+        align-items: baseline;
+    }
 }
 
 .contact-info{
     text-align: left;
+}
+
+.contact-info p{
+    margin: 5px 0;
 }
